mobile menu - overflow fix

--- a/faq.css
+++ b/faq.css
@@ -86,3 +86,18 @@ h1 {
     margin-bottom: 3rem;
     border-bottom: 1px white solid;
 }
+
+@media only screen and (max-width: 500px)  { 
+    .logo {
+        height: 15vh;
+    }
+    .main {
+        margin-top: 12%;
+    }
+    nav {
+        visibility: hidden;
+    }
+    body {        
+        width: 100vw;
+    }
+}
